--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-8 affix-parent">
+  <div class="col-md-6 affix-parent">
     <div ui-scrollfix="+50" data-clampedwidth=".affix-parent" class="sim-fixed">
       <div class="panel panel-default">
         <div class="panel-body">
@@ -26,13 +26,15 @@
               <thead>
                 <th class="cpu-address-column">Register</th>
                 <th class="cpu-binary-column">Binary</th>
+                <th class="cpu-hex-column">Hex</th>
                 <th class="cpu-value-column">Value</th>
               </thead>
-              <tr><td>pc</td><td>{{simulator.pc | binary}}</td><td>{{simulator.pc}}</td></tr>
-              <tr><td>ir</td><td>{{simulator.ir | binary}}</td><td>{{simulator.ir | instruction}}</td></tr>
+              <tr><td>pc</td><td>{{simulator.pc | binary}}</td><td>{{simulator.pc | nibble}}</td><td>{{simulator.pc}}</td></tr>
+              <tr><td>ir</td><td>{{simulator.ir | binary}}</td><td>{{simulator.ir | nibble}}</td><td>{{simulator.ir | instruction}}</td></tr>
               <tr ng-repeat="register in simulator.registers track by $index">
                 <td>{{"r" + $index}}</td>
                 <td>{{register | binary}}</td>
+                <td>{{register | nibble}}</td>
                 <td>{{register}}</td>
               </tr>
             </table>
@@ -41,22 +43,19 @@
       </div>
     </div>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-10">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">RAM</h3>
       </div>
       <table class="table table-bordered table-very-condensed">
         <thead>
-          <th class="ram-address-column">Address</th>
-          <th class="ram-binary-column">Binary</th>
-          <th class="ram-value-column">Value</th>
+          <th class="ram-base-column"></th>
+          <th ng-repeat="i in range(16)" class="ram-column text-right">{{ i | hex }}</th>
         </thead>
-        <tr ng-repeat="address in simulator.ram track by $index" ng-class="{ danger: simulator.codeSegmentBoundary > $index }">
-          <td><span ng-show="simulator.pc == $index">pc <span class="glyphicon glyphicon-arrow-right"></span></span> {{$index}}</td>
-          <td>{{address | binary}}</td>
-          <td ng-if="simulator.codeSegmentBoundary > $index">{{address | instruction}}</td>
-          <td ng-if="simulator.codeSegmentBoundary <= $index">{{address}}</td>
+        <tr ng-repeat="i in range(16)">
+          <td class="text-right">{{i * 16 | hex}}</td>
+          <td ng-repeat="j in range(16)" ng-class="{ info: simulator.codeSegmentBoundary > (i * 16) + j , warning: simulator.lastPc == (i * 16) + j, danger: simulator.pc == (i * 16) + j, 'changed-ram': simulator.ram[(i * 16) + j] != 0 }" class="text-right">{{ simulator.ram[(i * 16) + j] | nibble }}</td>
         </tr>
       </table>
     </div>
