--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -1,63 +1,117 @@
 <div class="row">
   <div class="col-md-6 affix-parent">
     <div ui-scrollfix="+50" data-clampedwidth=".affix-parent" class="sim-fixed">
+
+      
+
+      <div class="btn-toolbar simulator-controls">
+        <div class="btn-group">
+          <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back to Edit</button>
+        </div>
+        <div class="btn-group">
+          <button class="btn btn-default" ng-click="reset()" title="Reset Simulator">Reset <span class="glyphicon glyphicon-refresh"></span></button>
+          <button class="btn btn-default" ng-click="stepBack()" title="Step Back">Step <span class="glyphicon glyphicon-arrow-left"></span></button>
+          <button class="btn btn-default" ng-click="stepForward()" title="Step Forward">Step <span class="glyphicon glyphicon-arrow-right"></span></button>
+          <button class="btn btn-default" ng-click="pauseExecution()" title="Pause">Pause <span class="glyphicon glyphicon-pause"></span></button>
+          <button class="btn btn-success" ng-click="runProgram()" title="Run!">Run! <span class="glyphicon glyphicon-play"></span></button>
+        </div>
+      </div>
+
       <div class="panel panel-default">
         <div class="panel-body">
-          <div class="simulator-controls ">
-            <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back to Editor</button>
-            <div class="btn-group pull-right">
-              <button class="btn btn-default" ng-click="reset()" title="Reset Simulator"><span class="glyphicon glyphicon-refresh"></span></button>
-              <button class="btn btn-default" ng-click="stepBack()" title="Step Back"><span class="glyphicon glyphicon-arrow-left"></span></button>
-              <button class="btn btn-default" ng-click="stepForward()" title="Step Forward"><span class="glyphicon glyphicon-arrow-right"></span></button>
-              <button class="btn btn-default" ng-click="pauseExecution()" title="Pause"><span class="glyphicon glyphicon-pause"></span></button>
-              <button class="btn btn-primary" ng-click="runProgram()" title="Run!">Run! <span class="glyphicon glyphicon-play"></span></button>
-            </div>
-          </div>
           <div id="hmmm-console"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-16">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">CPU</h3>
-            </div>
-            <table class="table table-bordered table-very-condensed">
-              <thead>
-                <th class="cpu-address-column">Register</th>
-                <th class="cpu-binary-column">Binary</th>
-                <th class="cpu-hex-column">Hex</th>
-                <th class="cpu-value-column">Value</th>
-              </thead>
-              <tr><td>pc</td><td>{{simulator.pc | binary}}</td><td>{{simulator.pc | nibble}}</td><td>{{simulator.pc}}</td></tr>
-              <tr><td>ir</td><td>{{simulator.ir | binary}}</td><td>{{simulator.ir | nibble}}</td><td>{{simulator.ir | instruction}}</td></tr>
-              <tr ng-repeat="register in simulator.registers track by $index">
-                <td>{{"r" + $index}}</td>
-                <td>{{register | binary}}</td>
-                <td>{{register | nibble}}</td>
-                <td>{{register}}</td>
-              </tr>
-            </table>
-          </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">CPU</h3>
         </div>
+        <table class="table table-bordered table-very-condensed">
+          <thead>
+            <th class="cpu-address-column">Register</th>
+            <th class="cpu-binary-column">Binary</th>
+            <th class="cpu-hex-column">Hex</th>
+            <th class="cpu-value-column">Decimal/Instruction</th>
+          </thead>
+          <tr><td>pc</td><td>{{simulator.pc | binary}}</td><td>0x{{simulator.pc | nibble}}</td><td>{{simulator.pc}}</td></tr>
+          <tr><td>ir</td><td>{{simulator.ir | binary}}</td><td>0x{{simulator.ir | nibble}}</td><td>{{simulator.ir | instruction}}</td></tr>
+          <tr ng-repeat="register in simulator.registers track by $index">
+            <td>{{"r" + $index}}</td>
+            <td>{{register | binary}}</td>
+            <td>0x{{register | nibble}}</td>
+            <td>{{register}}</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
   <div class="col-md-10">
+
     <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title">RAM</h3>
+      <div class="panel-heading clearfix">
+        <h4 class="pull-left">RAM</h4>
+        <div class="btn-group pull-right" role="group">
+            <button type="button" class="btn btn-default" ng-class="active: ramView == ramViews.GRID" ng-click="changeRamView(ramViews.GRID)"><span class="glyphicon glyphicon-th"></span> Grid View</button>
+            <button type="button" class="btn btn-default" ng-class="active: ramView == ramViews.LIST" ng-click="changeRamView(ramViews.LIST)"><span class="glyphicon glyphicon-th-list"></span> List View</button>
+        </div>
       </div>
-      <table class="table table-bordered table-very-condensed">
+
+      <!-- RAM List View -->
+      <table class="table table-bordered table-very-condensed" ng-show="ramView == ramViews.GRID">
         <thead>
           <th class="ram-base-column"></th>
           <th ng-repeat="i in range(16)" class="ram-column text-right">{{ i | hex }}</th>
         </thead>
         <tr ng-repeat="i in range(16)">
           <td class="text-right">{{i * 16 | hex}}</td>
-          <td ng-repeat="j in range(16)" ng-class="{ info: simulator.codeSegmentBoundary > (i * 16) + j , warning: simulator.lastPc == (i * 16) + j, danger: simulator.pc == (i * 16) + j, 'changed-ram': simulator.ram[(i * 16) + j] != 0 }" class="text-right">{{ simulator.ram[(i * 16) + j] | nibble }}</td>
+          <td ng-repeat="j in range(16)" ng-class="{ 'code-seg': simulator.codeSegmentBoundary > (i * 16) + j , 'last-pc-index': simulator.lastPc == (i * 16) + j, 'pc-index': simulator.pc == (i * 16) + j, 'changed-ram': (simulator.ram[(i * 16) + j] != 0) && (i * 16) + j >= simulator.codeSegmentBoundary, 'changed-ram-animated': (simulator.ram[(i * 16) + j] != 0) && (i * 16) + j >= simulator.codeSegmentBoundary, 'selected-ram': (i * 16) + j == selectedRamIndex }" ng-click="selectRam((i * 16) +j)" class="text-right">{{ simulator.ram[(i * 16) + j] | nibble }}</td>
         </tr>
       </table>
+
+      <div class="ram-table-info">
+        <div class="row">
+          <div class="col-md-8">
+            <dl class="dl-horizontal" ng-show="ramView == ramViews.GRID">
+              <dt>Selected Address</dt><dd>{{selectedRamIndex >= 0 ? ("0x" + (selectedRamIndex | hex)) : ""}}</dd>
+              <dt>Binary Value</dt><dd>{{selectedRamIndex >= 0 ? (simulator.ram[selectedRamIndex] | binary) : ""}}</dd>
+              <dt>Hex Value</dt><dd>{{selectedRamIndex >= 0 ? ("0x" + (simulator.ram[selectedRamIndex] | nibble)) : ""}}</dd>
+              <dt>Instruction Value</dt><dd>{{selectedRamIndex >= 0 ? (simulator.ram[selectedRamIndex] | instruction) : ""}}</dd>
+            </dl>
+          </div>
+          <div class="col-md-8">
+            <dl class="dl-horizontal" ng-show="ramView == ramViews.GRID">
+              <dt>Code</dt><dd><span class="code-seg">&nbsp;&nbsp;&nbsp;&nbsp;</span></dd>
+              <dt>Current Instruction</dt><dd><span class="last-pc-index">&nbsp;&nbsp;&nbsp;&nbsp;</span></dd>
+              <dt>Next Instruction (pointed to by pc)</dt><dd><span class="pc-index">&nbsp;&nbsp;&nbsp;&nbsp;</span></dd>
+              <dt>Updated RAM Values</dt><dd><span class="changed-ram">&nbsp;&nbsp;&nbsp;&nbsp;</span></dd>
+            </dl>
+          </div>
+        </div>
+      </div>
+
+      <!-- RAM List View -->
+      <table class="table table-bordered table-very-condensed" ng-show="ramView == ramViews.LIST">
+        <thead>
+          <th style="width: 25%;">Address</th>
+          <th style="width: 35%;">Binary</th>
+          <th style="width: 15%;">Hex</th>
+          <th style="width: 25%;">Value</th>
+        </thead>
+        <tr ng-repeat="address in simulator.ram track by $index" ng-class="{ danger: simulator.boundary > $index }">
+          <td>
+            <span ng-show="simulator.pc == $index">next <span class="glyphicon glyphicon-arrow-right pc-pointer"></span></span>
+            <span ng-show="simulator.lastPc == $index">now <span class="glyphicon glyphicon-arrow-right last-pc-pointer"></span></span> {{$index}}
+          </td>
+          <td>{{address | binary}}</td>
+          <td>0x{{address | nibble}}</td>
+          <td ng-if="simulator.codeSegmentBoundary > $index">{{address | instruction}}</td>
+          <td ng-if="simulator.codeSegmentBoundary <= $index">{{address}}</td>
+        </tr>
+      </table>
+
     </div>
+
+
   </div>
 </div>
