--- a/templates/editor.html
+++ b/templates/editor.html
@@ -14,16 +14,16 @@
       </div>
       <div class="panel-body">
         <div class="editor-head">
-          <button class="btn btn-default" ng-click="loadFile()">Load File <span class="glyphicon glyphicon-floppy-open"></span></button>
-          <input type="file" id="secret-file-select" accept=".hmmm" onchange="angular.element(this).scope().fileSelected(this)" />
-          <button class="btn btn-default" ng-click="saveFile()">Save File <span class="glyphicon glyphicon-floppy-save"></span></button>
-          <a class="btn btn-default" href="http://www.cs.hmc.edu/~cs5grad/cs5/hmmm/documentation/documentation.html" target="_blank">Docs <span class="glyphicon glyphicon-book"></span></a>
           <div class="btn-group">
-            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Examples <span class="caret"></span></button>
+            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Try an Example! <span class="caret"></span></button>
             <ul class="dropdown-menu">
               <li ng-repeat="example in examples track by $index"><a href="#" ng-click="selectExample($index)">{{example.name}}</a></li>
             </ul>
           </div>
+          <button class="btn btn-default" ng-click="loadFile()">Load File <span class="glyphicon glyphicon-floppy-open"></span></button>
+          <input type="file" id="secret-file-select" accept=".hmmm" onchange="angular.element(this).scope().fileSelected(this)" />
+          <button class="btn btn-default" ng-click="saveFile()">Save File <span class="glyphicon glyphicon-floppy-save"></span></button>
+          <a class="btn btn-default" href="http://www.cs.hmc.edu/~cs5grad/cs5/hmmm/documentation/documentation.html" target="_blank">Docs <span class="glyphicon glyphicon-book"></span></a>
           <button class="btn btn-primary pull-right" ng-click="assemble()">Assemble! <span class="glyphicon glyphicon-arrow-right"></span></button>
         </div>
         <div id="hmmm-editor" class="editor"></div>
