--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -2,8 +2,6 @@
   <div class="col-md-6 affix-parent">
     <div ui-scrollfix="+50" data-clampedwidth=".affix-parent" class="sim-fixed">
 
-      
-
       <div class="btn-toolbar simulator-controls">
         <div class="btn-group">
           <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back to Edit</button>
@@ -113,5 +111,30 @@
     </div>
 
 
+  </div>
+</div>
+
+<!-- Input Modal -->
+<div class="modal" id="input-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">HMMM Input</h4>
+      </div>
+      <div class="modal-body">
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="hmmm-input" class="col-sm-8 control-label">Please enter an integer</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="hmmm-input" ng-model="inputValue">
+          </div>
+        </div>
+      </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" ng-click="readInput(inputValue)">Enter</button>
+      </div>
+    </div>
   </div>
 </div>
