Added conditional scrollfix only when in list RAM view

--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 affix-parent">
-    <div ui-scrollfix="+50" data-clampedwidth=".affix-parent" class="sim-fixed">
+    <div ui-scrollfix="+50" data-clampedwidth=".affix-parent" class="sim-fixed" ng-class="{ 'scrollfix-enabled': ramView == ramViews.LIST }">
 
       <div class="btn-toolbar simulator-controls">
         <div class="btn-group">
