--- a/css/site.css
+++ b/css/site.css
@@ -36,7 +36,7 @@ table tr td:first-child, table th:first-child {
   padding-bottom: 10px;
 }
 
-.sim-fixed.ui-scrollfix {
+.scrollfix-enabled.ui-scrollfix {
   position: fixed;
   top: 21px;
 }
