Input dialog is now cancelable in case the user gets stuck in an infinite read loop

--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -134,6 +134,7 @@
           </div>
         </form>
         <p class="text-danger text-right" ng-show="invalidInputInteger"><strong>Oh snap!</strong> That's not a valid integer. Try again!</p>
+        <p class="text-center">Stuck in an infinite loop? <a href="" ng-click="cancelInput()">Click to stop execution.</a></p>
       </div>
     </div>
   </div>
