--- a/templates/simulator.html
+++ b/templates/simulator.html
@@ -4,13 +4,23 @@
 
       <div class="btn-toolbar simulator-controls">
         <div class="btn-group">
-          <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back to Edit</button>
+          <button class="btn btn-default" ng-click="go('/', 'slide-backward')"><span class="glyphicon glyphicon-arrow-left"></span> Back</button>
         </div>
         <div class="btn-group">
-          <button class="btn btn-default" ng-click="reset()" title="Reset Simulator">Reset <span class="glyphicon glyphicon-refresh"></span></button>
-          <button class="btn btn-default" ng-click="stepBack()" title="Step Back">Step <span class="glyphicon glyphicon-arrow-left"></span></button>
-          <button class="btn btn-default" ng-click="stepForward()" title="Step Forward">Step <span class="glyphicon glyphicon-arrow-right"></span></button>
-          <button class="btn btn-default" ng-click="pauseExecution()" title="Pause">Pause <span class="glyphicon glyphicon-pause"></span></button>
+          <form class="form-inline">
+            <div class="form-group">
+              <select class="form-control" ng-model="simulator.mode">
+                <option ng-repeat="mode in simulatorModes" value="{{mode}}">{{displayStringForMode(mode)}}</option>
+              </select>
+            </div>
+            <a data-toggle="tooltip" data-placement="bottom" title="Simulator Modes: Safe mode prevents writing to the code segment and prevents execution outside the code segment. Warn mode will log a warning in these cases. Unsafe mode will let you do whatever you want!"><span class="badge">?</span></a>
+          </form>
+        </div>
+        <div class="btn-group pull-right">
+          <button class="btn btn-default" ng-click="reset()" title="Reset Simulator" data-toggle="tooltip" data-placement="bottom"><span class="glyphicon glyphicon-refresh"></span></button>
+          <button class="btn btn-default" ng-click="stepBack()" title="Step Back" data-toggle="tooltip" data-placement="bottom"><span class="glyphicon glyphicon-arrow-left"></span></button>
+          <button class="btn btn-default" ng-click="stepForward()" title="Step Forward" data-toggle="tooltip" data-placement="bottom"><span class="glyphicon glyphicon-arrow-right"></span></button>
+          <button class="btn btn-default" ng-click="pauseExecution()" title="Pause" data-toggle="tooltip" data-placement="bottom"><span class="glyphicon glyphicon-pause"></span></button>
           <button class="btn btn-success" ng-click="runProgram()" title="Run!">Run! <span class="glyphicon glyphicon-play"></span></button>
         </div>
       </div>
@@ -48,10 +58,10 @@
 
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
-        <h4 class="pull-left">RAM</h4>
+        <h4>RAM</h4>
         <div class="btn-group pull-right" role="group">
-            <button type="button" class="btn btn-default" ng-class="{ active: ramView == ramViews.GRID }" ng-click="changeRamView(ramViews.GRID)"><span class="glyphicon glyphicon-th"></span> Grid View</button>
-            <button type="button" class="btn btn-default" ng-class="{ active: ramView == ramViews.LIST }" ng-click="changeRamView(ramViews.LIST)"><span class="glyphicon glyphicon-th-list"></span> List View</button>
+          <button type="button" class="btn btn-default" ng-class="{ active: ramView == ramViews.GRID }" ng-click="changeRamView(ramViews.GRID)"><span class="glyphicon glyphicon-th"></span> Grid View</button>
+          <button type="button" class="btn btn-default" ng-class="{ active: ramView == ramViews.LIST }" ng-click="changeRamView(ramViews.LIST)"><span class="glyphicon glyphicon-th-list"></span> List View</button>
         </div>
       </div>
 
